--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
+    "add": "^2.0.6",
     "d3": "^7.9.0",
+    "firebase": "^12.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.7.1",
-    "tailwindcss": "^4.1.11"
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "tailwindcss": "^4.1.11",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
